add and remove stars from favorite

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,12 @@
   align-items: center;
   justify-content: center;
 }
+
+.content {
+  width: 80%;
+  margin: auto;
+}
+
+.ant-table-wrapper {
+  width: 100%;
+}
